# websocket-pairing

./: Cargo.toml  README.md  test.html
.github/workflows/: push.yml
src/: bore.rs  main.rs
