[package]
name = "websocket-pairing"
version = "0.3.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41", features = ["macros", "sync", "rt-multi-thread", "time"] }
tokio-tungstenite = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.31"
rand = "0.8"
anyhow = { version = "1.0.56", features = ["backtrace"], optional = true }
tracing = {version ="0.1.32", optional = true}
uuid = { version = "1.2.1", features = ["serde", "v4"], optional = true }
hmac = {version ="0.12.1", optional = true}
sha2 = {version ="0.10.2", optional = true}
futures-util = { version = "0.3.21", features = ["sink"], optional = true }
tokio-util = { version = "0.7.1", features = ["codec"], optional = true }
hex = {version = "0.4.3", optional = true}

[features]
default = ["proxy"]
proxy = ["dep:anyhow", "dep:tracing", "dep:uuid", "dep:hmac", "dep:sha2", "dep:futures-util", "dep:tokio-util", "dep:hex"]
